[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/characters/dragon_maniac.png" type="Texture" id=1]
[ext_resource path="res://enemy/dragon.gd" type="Script" id=2]
[ext_resource path="res://fonts/NotoSansTC-Light.otf" type="DynamicFontData" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.0834
height = 16.9342

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "stun"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}

[sub_resource type="DynamicFont" id=6]
size = 10
font_data = ExtResource( 3 )

[node name="Dragon" type="Area2D" groups=[
"monster",
]]
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
vframes = 3
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/injured = SubResource( 3 )
anims/stun = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="npcName" type="Label" parent="."]
margin_left = -8.49447
margin_top = -31.1062
margin_right = 8.50553
margin_bottom = -15.1062
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0862745, 0.0196078, 0.290196, 1 )
text = "npc"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Dragon_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Dragon_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Dragon_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
